--- a/tests/fixtures/index/unexpected_heading.html
+++ b/tests/fixtures/index/unexpected_heading.html
@@ -4,24 +4,72 @@
     <meta charset="utf-8">
   </head>
   <body>
-    <h1>Current Reviews</h1>
-    <p>Please select your region to find electoral, boundary and structural reviews.</p>
-    <div class="two-columns">
-      <div class="column span">
-        <h2>Foo Bar</h2>
-        <ul>
-          <li><a href="http://www.lgbce.org.uk/current-reviews/eastern/suffolk/babergh">Babergh</a></li>
-          <li><a href="http://www.lgbce.org.uk/current-reviews/south-east/hampshire/basingstoke-and-deane">Basingstoke and Deane</a></li>
-        </ul>
+
+    <div class="row">
+      <div class="col-sm-12">
+        <div class="field field--name-node-title field--type-ds field--label-hidden field--item">
+          <h1>
+            All Reviews
+          </h1>
+        </div>
+        <div class="field field--name-field-page-body field--type-text-long field--label-hidden field--item">
+          <p>Please select your region to find electoral, boundary and structural reviews</p>
+        </div>
       </div>
-      <div class="column span">
-        <h2>Recently Completed</h2>
-        <ul>
-          <li><a href="http://www.lgbce.org.uk/current-reviews/north-west/cumbria/allerdale">Allerdale</a></li>
-          <li><a href="http://www.lgbce.org.uk/current-reviews/south-east/kent/ashford">Ashford</a></li>
-        </ul>
-      </div>
-      <div class="clear"></div>
     </div>
+
+    <div class="row">
+      <div class="col-sm-6">
+        <div class="group-left">
+          <div class="field field--name-dynamic-block-fieldnode-dsblocktest1 field--type-ds field--label-above">
+            <div class="field--label">Foo Bar</div>
+            <div class="field--item">
+              <div class="views-element-container form-group">
+                <div class="reviews-block current-reviews-block view view-all-current-reviews-block view-id-all_current_reviews_block view-display-id-block_1 js-view-dom-id-cee534ecba27febc5ca4894d806d800b9c4775cf2651b6391028a0b31cbdad94">
+                  <div class="view-content">
+                    <div class="item-list">
+                      <ul>
+                        <li>
+                          <div class="views-field views-field-title"><span class="field-content"><a href="/all-reviews/eastern/suffolk/babergh" hreflang="en">Babergh</a></span></div>
+                        </li>
+                        <li>
+                          <div class="views-field views-field-title"><span class="field-content"><a href="/all-reviews/south-east/hampshire/basingstoke-and-deane" hreflang="en">Basingstoke and Deane</a></span></div>
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-6">
+        <div class="group-right">
+          <div class="field field--name-dynamic-block-fieldnode-recent-reviews field--type-ds field--label-above">
+            <div class="field--label">Recent Reviews</div>
+            <div class="field--item">
+              <div class="views-element-container form-group">
+                <div class="reviews-block recent-reviews-block view view-all-recent-reviews-block view-id-all_recent_reviews_block view-display-id-block_1 js-view-dom-id-74e5efb644f7cdc532acf1216816fbdef537901a6b62a8f54c4bf511e55a9bc9">
+                  <div class="view-content">
+                    <div class="item-list">
+                      <ul>
+                        <li>
+                          <div class="views-field views-field-title"><span class="field-content"><a href="/all-reviews/north-west/cumbria/allerdale" hreflang="en">Allerdale</a></span></div>
+                        </li>
+                        <li>
+                          <div class="views-field views-field-title"><span class="field-content"><a href="/all-reviews/south-east/kent/ashford" hreflang="en">Ashford</a></span></div>
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
   </body>
 </html>
